--- a/src/styles/List.css
+++ b/src/styles/List.css
@@ -29,8 +29,14 @@
         display: block;
     }
 
+    .list-title {
+        width: fit-content;
+        margin: 0 auto;
+    }
+
     .list {
         justify-content: center;
+        padding: 0;
     }
 }
 
